--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -70,12 +70,16 @@
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s forwards;
   }
   
   .lighit #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
   
+  }
+  #switch button:hover{
+    outline: 8px solid var(--highlight-color);
   }
   
   #switch span {
@@ -154,5 +158,22 @@
     .lighit{
       --bg-url: url(./assets/bg-desktop-light.jpg)
     }
+  }
 
+  @keyframes slide-in {
+    from{
+      left: 0;
+    }
+    to{
+      left: 50%;
+    }
+  }
+
+  @keyframes slide-back {
+    from{
+      left: 50%;
+    }
+    to{
+      left: 0;
+    }
   }
