--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -149,17 +149,16 @@
     font-size: 14px;
   }
 
-  /* midia queries*/
-  @media (min-width: 780px) {
+  @media (min-width: 700px) {
     :root {
-      --bg-url: url(./assets/bg-desktop.jpg):
+      --bg-url: url(./assets/bg-desktop.jpg);
     }
 
     .lighit{
-      --bg-url: url(./assets/bg-desktop-light.jpg)
+      --bg-url: url(./assets/bg-desktop-light.jpg);
     }
   }
-
+  
   @keyframes slide-in {
     from{
       left: 0;
